objects/Viewpath__VP_Configuration__c.object
<CustomObject>
    <description>Viewpath Configuration Settings</description>
    <fields>
        <fullName>Viewpath__ActivatedDate__c</fullName>
        <description>Date your installation was activated</description>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Viewpath__ApiAuthorized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ApiAuthorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Viewpath__ApiKey_Encrypted__c</fullName>
        <description>Now storing the ApiKey encrypted- obsoletes the old ApiKey field.</description>
        <label>ApiKey_Encrypted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewpath__ApiKey__c</fullName>
        <description>API Key assigned to your Organization</description>
        <label>ApiKey</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewpath__ApiUsername__c</fullName>
        <description>API Username assigned to your organization</description>
        <label>ApiUsername</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewpath__ChatterEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ChatterEnabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Viewpath_Configuration</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Viewpath_Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>